cvs pull from ross
  add flags arguments to post-hooks, and have defaultUserHooks use postConf
  instead of preConf.

  changes to package description fields, as discussed on the libraries list:
  
  * allow both License and License-File, which now correspond to different
    fields of Package Description.
  
  * add Synopsis.
  
  * rename Hidden-Modules as Other-Modules.

20050211215234-6d90f-8ad48a893a1a49d4778d5905796ff9f9a9d2ccd3.gz

--- a/TODO
+++ b/TODO
@@ -1,8 +1,13 @@
 * misc
 
-> > Is it sufficient to put License: BSD3 in the package description?
-> > Or should License-File be mandatory, and License just an optional
-> > hint?
+* I guess we should take the "OtherLicense"
+  option out of license type, add a licenseFile field, and make either
+   /or required.
+
+* make preprocessors in hooks override the built-in ones
+
+* Fix up sdist! 
+* Write tests for make and hugs
 
 * Write semantic checker for package description file.  start w/
    sanity checker.  give error if buildInfo field given when no
