added tests for reg scripts; some cleanup
20050215163918-6d90f-0b52fb93ba4673bfcd26cd776caa8f082c13b3f3.gz

--- a/TODO
+++ b/TODO
@@ -30,6 +30,8 @@
    command?
 ** Add a flag to configure to specify where to put them?
 
+* do we have to run configure before clean?
+
 * Preprocessors
 ** chain of preprocessors
 ** what other preprocessors can't unlit?
