--- a/changelog
+++ b/changelog
@@ -1,12 +1,14 @@
 -*-change-log-*-
 
-1.1  Isaac Jones  <ijones@syntaxpolice.org> Wed Feb 19 2005
-	* Handles recursive modules for GHC 6.2
+1.0.2  Isaac Jones  <ijones@syntaxpolice.org> May 2005
+	* WARNING: Interfaces not documented in the user's guide may
+	change in future releases.
+	* Handles recursive modules for GHC 6.2 and GHC 6.4.
 	* Added "setup test" command (Used with UserHook)
 	* implemented handling of _stub.{c,h,o} files
 	* Added pattern guards as a language extension
 	* Register / unregister .bat files for windows
-	* Exposed some API stuff
+	* Exposed more of the API
 	* Several bug fixes
 
 1.0  Isaac Jones  <ijones@syntaxpolice.org> March 11 2005
