--- a/changelog
+++ b/changelog
@@ -1,12 +1,16 @@
 -*-change-log-*-
 
-1.0.2  Isaac Jones  <ijones@syntaxpolice.org> May 2005
+1.0.2  Isaac Jones  <ijones@syntaxpolice.org> June 2005
 	* WARNING: Interfaces not documented in the user's guide may
-	change in future releases.
+	  change in future releases.
 	* Handles recursive modules for GHC 6.2 and GHC 6.4.
 	* Added "setup test" command (Used with UserHook)
 	* implemented handling of _stub.{c,h,o} files
+	* Added support for profiling
+	* Changed install prefix of libraries (pref/pkgname-version
+	  to prefix/pkgname-version/compname-version)
 	* Added pattern guards as a language extension
+	* Moved some functionality to Language.Haskell.Extension
 	* Register / unregister .bat files for windows
 	* Exposed more of the API
 	* Added support for the hide-all-packages flag in GHC > 6.4
