--- a/releaseNotes
+++ b/releaseNotes
@@ -9,7 +9,7 @@ changes and installation instructions.
 
 DOWNLOAD:
 
-The Haskell Cabal has reached version 1.2-RC1.  This pre-release has a
+The Haskell Cabal has reached version 1.1.1.  This pre-release has a
 number of new features including a hook for testing, support for
 profiling, and support for _stub files, as well as several bug fixes.
 
