slight makefile tweaks
20050716231933-6d90f-b44279146a598ead77b4f39ccda0a033c5313f46.gz

--- a/TODO
+++ b/TODO
@@ -24,6 +24,9 @@ helpful.
 
 I hope this can sneak into the Cabal release, but don't worry if not.
 
+* add a haskell-version field?
+* ignore unknown fields? (--force?)
+
 -= 1.0 =-
 
 * Install libraries in $libdir/ghc-$ghc_version/ rather than $libdir.
