add docs to todo
20050730200638-6d90f-0fdd5ba5ed958db69a68fb1a1d003bdcbf1fef8e.gz

--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
 ------------------------------------------------------------
 -= 1.2 =-
 
+* add flags The patch adds a couple extra configure options,
+  --enable-library-for-ghci / --disable-library-for-ghci or whatever
+   they end up being, to the manual.
+
 * Something for gentoo which produces a package gen file but doesn't
   do the register??
 
