--- a/TODO
+++ b/TODO
@@ -25,6 +25,8 @@ let me know if you want a complete testcase.
 * Clarify build-depends; unix? posix? utils? see journal entry of aug
    22, 2005.
 
+* look at "cabal design 
+
 * REMOVE THESE FLAGS: add flags The patch adds a couple extra configure options,
   --enable-library-for-ghci / --disable-library-for-ghci or whatever
    they end up being, to the manual.  Which is default?  Add test case
