--- a/changelog
+++ b/changelog
@@ -1,5 +1,15 @@
 -*-change-log-*-
 
+1.1.3  Isaac Jones  <ijones@syntaxpolice.org> Sept 2005
+	* WARNING: Interfaces not documented in the user's guide may
+	  change in future releases.
+	* Move building of GHCi .o libs to the build phase rather than
+	register phase. (from Duncan Coutts)
+	* Use .tar.gz for source package extension
+	* Uses GHC instead of cpphs if the latter is not available
+	* Added experimental "command hooks" which completely override the
+	default behavior of a command.
+	* Some bugfixes
 1.1.1  Isaac Jones  <ijones@syntaxpolice.org> July 2005
 	* WARNING: Interfaces not documented in the user's guide may
 	  change in future releases.
