--- a/releaseNotes
+++ b/releaseNotes
@@ -9,9 +9,8 @@ changes and installation instructions.
 
 DOWNLOAD:
 
-The Haskell Cabal has reached version 1.1.2.  This pre-release has a
-number of new features including a hook for testing, support for
-profiling, and support for _stub files, as well as several bug fixes.
+The Haskell Cabal has reached version 1.1.3.  This pre-release has a
+number of new features and bugfixes.
 
 Download the Cabal here (source and debian versions available):
 http://www.haskell.org/cabal/download.html
