basic pfesetup support for args and with and such
20051009130618-6d90f-2e40ac96ccc08815ce1734eb0d50fb7935723d7f.gz

--- a/TODO
+++ b/TODO
@@ -1,3 +1,10 @@
+* Program
+
+** Got basic haddock stuff working, --with-haddock and --haddock-args.
+   Next some other programs, then non-preprocessor, then the
+   preprocessors, finally the compilers.  Work w/ backward
+   compatibility here.
+
 ------------------------------------------------------------
 -= 1.2 =-
 
