lots of cvs pulls from Ross, Malcolm, Simon, & Simon
  No reason we shouldn't have Ord on PackageIdentifiers

  Various changes committed in one bunch:
  
   - bindir/libdir/datadir/libexecdir support as discussed on
     librarie@haskell.org.  This should be considered fairly
     experimental.  Full documentation in the manual.
  
   - A module Paths_<pkgname> is autogenerated, you should be able
     to just import this.  (I haven't made this work with Hugs yet, though).
     I suspect I might need to make sure it's available to 'setup haddock'
     too.  Also, I haven't tested this on Windows yet (TODO).
  
   - All installation-paths-related functions are now provided by
     Distribution.Simple.LocalBuildInfo
  
   - some cleaning up of Distribution.Simple.Build as regards GHC support.
  
   - "setup copy" now takes a --destdir argument instead of --copy-prefix
     (the latter is still accepted for compatibility).
  
     Note for autoconf/make users: this means that your Makefile now
     needs to implement a "copy" target, see the manual for details.
  
   - New types: Distribution.Setup.CopyFlags (was previously just a
     pair), and CopyDest (was previously Maybe FilePath).
  
   - Hooks: the post hooks all take a PackageDescription argument now.
     There seemed no reason not to do this, and sometimes it's useful.


  Remove literal tabs in strings.  Not Haskell'98.

  harmonize running of ./confugure between defaultUserHooks and
  Distribution.Make:
  
  * pass through the same set of flags, plus unrecognized options
  
  * select the default compiler before processing options

  Fixes for Windows

  added a simple-minded data-files field.  Also added getDataFileName to
  Paths_<pkg> to save client code from worrying about path separators.



20051016030620-6d90f-a2e775bd5bb9d2e543d4f4fc9743fa8b2a104f3e.gz

--- a/TODO
+++ b/TODO
@@ -20,6 +20,8 @@ preprocessed. The following does not work:
 Executable: Foo
 Main-is: Main.hsc
 
+Remove 'util' dependency.  Do something for ghc 6.2.2.
+
 Cabal does not handle dependencies for HSC2HS correctly. For example,
 if Foo.hsc has
      #include "x.h"
